--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -47,7 +47,8 @@
 }
 .article-container .headline-container .main .thumbnail img{
     width: 100%;
-    max-height: 445px;
+    //max-height: 445px;
+    height: 100%;
     object-fit: cover;
 }
 .article-container .headline-container .main .content{    
@@ -56,8 +57,8 @@
     // TITLE
     h1{
         margin: 0 0 10px 0;
-        font-size: 2em;
-        line-height: 22px;        
+        // font-size: 2em;
+        //line-height: 2.2em;        
     }
     // SUBTITLE
     h3{
