--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -11,7 +11,8 @@
                 position: relative;
                 .card-image{
                     width: 100%;
-                    max-height: 163px;
+                    // max-height: 163px;
+                    height: 163px;
                     object-fit: cover;
                 }
 
