--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -38,7 +38,8 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    max-height: 436px;
+    //max-height: 436px;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -68,12 +69,15 @@
     margin-bottom: 10px;
 }
 .editoral-container .headline-container .latest-news .content .ln-title{
-    font-weight: bold;
-    font-size: 1.1em;
-    margin-bottom: 10px;
+    h1{
+        // font-weight: bold;
+        // font-size: 2em;
+        // line-height: 2.2em;
+        margin-bottom: 10px;
+    }    
 }
 .editoral-container .headline-container .latest-news .content .ln-teaser{    
-    font-size: 0.75em;
+    font-size: 1em;
     margin-bottom: 10px;
 }
 .editoral-container .headline-container .latest-news .content  .footer{
