--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -14,7 +14,7 @@
     h1{
         color: $main-blue;
         font-size: 34px;
-        font-family: 'Neosans-Black';
+        line-height: 40px;        
         margin: 20px 0 0 0;
 
     }
@@ -39,7 +39,8 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    max-height: 436px;
+    // max-height: 436px;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -69,9 +70,12 @@
     margin-bottom: 10px;
 }
 .editoral-container .headline-container .latest-news .content .ln-title{
-    font-weight: bold;
-    font-size: 1.5em;
-    margin-bottom: 10px;
+    h1{
+        //font-weight: bold;
+        //font-size: 2em;
+        //line-height: 2.2em;
+        margin: 0 0 10px 0;
+    }
 }
 .editoral-container .headline-container .latest-news .content .ln-teaser{    
     font-size: 1em;
