--- a/src/styles/popular-news-side.scss
+++ b/src/styles/popular-news-side.scss
@@ -6,12 +6,14 @@
     img{
         width: 100%;
         max-height: 80px;
+        height: 80px;
         object-fit: cover;   
     }
 
     .side-content{        
         .side-title-section{
-            min-height: 35px;
+            min-height: 50px;
+            font-size: 0.9em;
         }
         .side-footer{
             font-weight: bold;
