--- a/src/styles/home-headline-slider.scss
+++ b/src/styles/home-headline-slider.scss
@@ -11,8 +11,8 @@
 
 .image-hl{
   width: 100%;
-  //max-height: 400px;
-  height: 100%;
+  max-height: 684px;
+  //height: 100%;
   object-fit: cover;
 }
 
