--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -39,8 +39,8 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    // max-height: 436px;
-    height: 100%;
+    max-height: 436px;
+    // height: 100%;
     object-fit: cover;
 }
 
