--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -39,7 +39,8 @@
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
     //max-height: 436px;
-    height: 100%;
+    //height: 100%;
+    max-height: 684px;
     object-fit: cover;
 }
 
@@ -73,7 +74,7 @@
         // font-weight: bold;
         // font-size: 2em;
         // line-height: 2.2em;
-        margin-bottom: 10px;
+        margin: 0 0 10px 0;
     }    
 }
 .editoral-container .headline-container .latest-news .content .ln-teaser{    
