--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -129,3 +129,16 @@ h1, h2, h3, h4, h5, h6{
     border-radius: 50%;
   }
 }
+.gf-slider{  
+  .el-carousel__container{
+    height: 563px;
+  }
+  .el-carousel__indicators{
+    // padding: 0;
+  }
+  .el-carousel__button{
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+}
