--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -27,6 +27,8 @@
 
 .editoral-container .headline-container .latest-news .background {
     position: relative;
+    text-align: center;
+    
 }
 .editoral-container .headline-container .latest-news .backgroundx {
     width: 100%; 
@@ -36,12 +38,9 @@
     top: 0px; 
     z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
 }
-.editoral-container .headline-container .latest-news .background img{
-    width:100%;
-    //max-height: 436px;
-    //height: 100%;
-    max-height: 684px;
-    object-fit: cover;
+.editoral-container .headline-container .latest-news .background img{    
+    width: 100%;    
+    height: 100%;    
 }
 
 .editoral-container .headline-container .latest-news .background .editorial-type-img {
