--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -87,6 +87,7 @@
             .img-mini {
                 width: 50px;
                 height: 50px;
+                margin-right: 20px;
                 float: left;
                 img{
                     width: 50px;
@@ -94,10 +95,14 @@
                 }
             }
             .e-name{
-                padding-top: 14px;
+                padding-top: 14px;                
                 .follow-user{
-                    margin-left: 20xp;
-                    padding: 10px 10px 5px 10px;
+                    margin-left: 20px;
+                    padding: 5px 10px 3px 10px;
+                    .icon-follow{
+                        width: 14px;
+                        height: 14px;
+                    }
                 }
             }
 
@@ -108,7 +113,7 @@
                 height: 52px;
                 .icon-network{
                     display: inline;        
-                }
+                }                
             }    
         }
     }
@@ -187,9 +192,9 @@
 .mc{
     // width: 100%;  
     display: table;
-      min-height: 52px;    
-      .mc-content{
-          vertical-align:middle;
-          display: table-cell;
-      }
-  }
+    min-height: 52px;    
+    .mc-content{
+        vertical-align:middle;
+        display: table-cell;
+    }
+}
