sidebar css, icons

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 //sidebar
-$menuBg: #013066; //#304156;
-$subMenuBg: #013066; //#1f2d3d;
-$menuHover: #FBDD01; // #001528;
+$menuBg: #051D49; //#304156;
+$subMenuBg: #051D49; //#1f2d3d;
+$menuHover: #EB0029; // #001528;
 
 //frontpage
 $bb-blue: #0A2F88;
