--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -180,7 +180,7 @@ a:hover {
 
 .side-separator {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   text-align: right;
 }
 .side-separator span{
