--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -162,3 +162,34 @@ h1, h2, h3, h4, h5, h6{
     border-radius: 50%;
   }
 }
+
+.rpt{
+  .el-dialog{
+    .el-dialog__header,
+    .el-dialog__body,
+    .el-dialog__footer
+    {
+        background-color: #e6e6e6;
+    }
+    .el-dialog__header{
+      text-align: center;
+      font-family: 'Neosans';
+      font-weight: 900;      
+      .el-dialog__title{
+        padding: 10px 0;
+        background-color: #fff;
+        display: block;
+        width: 100%;
+      }
+      .el-dialog__headerbtn{
+        top: -18px;
+        right: 0;
+        background-color: #e6e6e6;
+        padding: 5px;
+      }
+    }
+    .el-dialog__body{
+        padding: 20px;  
+    }
+  }
+}
