--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -12,7 +12,7 @@
                 .card-image{
                     width: 100%;
                     // max-height: 163px;
-                    height: 163px;
+                    height: 176px; // 312 * 17g
                     object-fit: cover;
                 }
 
