--- a/src/styles/home-header.scss
+++ b/src/styles/home-header.scss
@@ -89,8 +89,8 @@
       }
       .avatar-wrapper{
         img{
-          width: 40px;
-          height: 40px;
+          width: 50px;
+          height: auto;
         }
       }
     }
