add word-wrap: break-word;

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -293,9 +293,12 @@ a:hover {
 .headline {
   color: $headline;
   font-family: 'Neosans-Black';
+  word-wrap: break-word;
 }
-.sub-headline {
-  color: $subHeadline
+.sub-headline,
+.teaser {
+  color: $subHeadline;
+  word-wrap: break-word;
 }
 .content {
   color: $subHeadline
