--- a/src/styles/search-home.scss
+++ b/src/styles/search-home.scss
@@ -96,10 +96,11 @@
         font-weight: bold;
         font-size: 0.9em;
         line-height: 1.3em;
-        margin: 10px 0;        
+        margin: 5px 0 10px 0;
+        min-height: 40px;        
     }
     .author{
-        font-size: 0.75em;
+        font-size: 0.8em;
         font-weight: 900;
         margin: 0;
     }
