headline title 1.5 em, maks 100chars

--- a/src/styles/home-headline-slider.scss
+++ b/src/styles/home-headline-slider.scss
@@ -40,6 +40,7 @@ h2{
     background-color: #FFF;
     .headline{        
         margin: 0 0 10px 0;
+        font-size: 1.5em;
     }
     .teaser{
         font-size: 0.9em;
