--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -36,7 +36,7 @@
                 padding: 20px;
                 h1{
                     //font-weight: bold;
-                    //font-size: 2em;
+                    font-size: 1.5em;
                     //line-height: 2.2em;
                     margin: 0 0 10px 0;                
                 }
