--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -60,18 +60,28 @@
     }    
 }
 
-.editoral-container .list-container{
-    padding-top:30px;
+.editoral-container .list-container{    
     background-color: #fff;
+    display: flex;
+    .content{
+        padding-top:30px;
+        order: 1;
+        -ms-flex-order: 1;
+        width: 66.66667%;
+    }
+    .side-content{
+        padding-top:30px;
+        order: 2;
+        -ms-flex-order: 2;
+        width: 33.33333%;
+    }
 }
 
-.side-content{
-}
 .a-side{
-  margin-left: 20px;
+  // margin-left: 20px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 768px) {
     .editoral-container {        
         .headline-container {            
             .latest-news{                
@@ -105,6 +115,21 @@
                     margin-top: 10px;
                 }
             }
-        }    
+        }
+        
+        .list-container{
+            flex-direction: column;
+            .content{
+                order: 2;
+                flex-basis: auto;
+                width: 100%;
+            }
+            .side-content{
+                order: 1;
+                flex-basis: auto;
+                width: 100%;
+            }
+        }
     }    
+    
 }
