--- a/src/styles/editorial-video-list.scss
+++ b/src/styles/editorial-video-list.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .editoral-container {    
-    border-top: 3px solid #e6e6e6;
+    // border-top: 3px solid #e6e6e6;
     .videoWrapper {
         position: relative;
         padding-bottom: 56.25%;
@@ -19,99 +19,80 @@
         height: 100%;
     }        
 }
-.editoral-container .headline-container {
-    background-color: #e6e6e6;
-}
+
 .grid-content {
     border-radius: 4px;
     min-height: 36px;    
 }
-.editoral-container .headline-container .title-container{    
-    
-}
-.editoral-container .headline-container .latest-news{
-    background-color: #fff;
-    min-height: 300px;
-    margin-bottom: 40px;
-    margin-top: 20px;
-    .videoWrapper{
-        margin: 20px 20px;
+
+.editoral-container{
+    .headline-container {
+        background-color: #e6e6e6;
+        padding: 20px 0;
+        .latest-news{
+            background-color: #fff;
+            min-height: 300px;
+            // padding: 20px;
+            padding-top: 20px;
+            .videoWrapper{
+                margin: 0 20px 0 20px;
+            }
+            .info{
+                padding: 10px 20px 20px 20px;
+                p{ margin: 0; padding: 0; }               
+                h1{                        
+                   font-size: 1.6em;                       
+                }
+                .teaser{    
+                    font-size: 0.8em;
+                    line-height: 1.1em;
+                }
+                .author{
+                    font-size: 0.75em;
+                }
+            }
+        }
     }
 }
 
-.editoral-container .headline-container .latest-news .background {
-    position: relative;
-}
-.editoral-container .headline-container .latest-news .backgroundx {
-    width: 100%; 
-    height: 100%; 
-    position: fixed; 
-    left: 0px; 
-    top: 0px; 
-    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
-}
-.editoral-container .headline-container .latest-news .background img{
-    width:100%;
-    max-height: 500px;
-    object-fit: cover;
-}
-
-.editoral-container .headline-container .latest-news .background .editorial-type-img {
-    position: absolute;
-    top: 5%;
-    left: 2%;
-    // transform: translate( -50%, -50% );
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    background-color: $main-blue;
-    padding: 10px 10px 8px 10px;
-        h2{
-            text-transform: uppercase;
-            font-size: 1em;
-            margin: 0;
-        }
-    
-}
-
-
-.editoral-container .headline-container .latest-news .content{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-.editoral-container .headline-container .latest-news .content .ln-title{
-    font-weight: bold;
-    font-size: 1.1em;
-}
-
-.editoral-container .headline-container .latest-news .content  .footer{
-    font-weight: bold;
-    font-size: 0.8em;
-}
-.editoral-container .list-container{
-    margin-top:30px;
-    background-color: #fff;
-}
-
-.side-content{
-}
-.a-side{
-  margin-left: 20px;
-}
-.side-content .a-side .vid{
-    height: 20px;
-}
-  
-.editoral-container .list-container {
-    padding: 20px 0;
+.editoral-container .comment-container{
     .comments-content{
         background-color: #e6e6e6;
     }
-    .video-content{
-        padding-top: 40px;        
-    }
-
 }
 
+.editoral-container .list-container{
+    background-color: #fff;
+    display: flex;
+    .content{
+        padding-top:30px;
+        order: 1;
+        -ms-flex-order: 1;
+        width: 66.66667%;
+    }
+    .side-content{
+        padding-top:30px;
+        order: 2;
+        -ms-flex-order: 2;
+        width: 33.33333%;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+    .editoral-container {                
+        .list-container{
+            flex-direction: column;
+            .content{
+                order: 2;
+                flex-basis: auto;
+                width: 100%;
+            }
+            .side-content{
+                order: 1;
+                flex-basis: auto;
+                width: 100%;
+            }
+        }
+    }    
+    
+}
