--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -1,90 +1,49 @@
 @import './variables.scss';
 
-.editoral-container {
-    // padding-top: 150px
-}
-.editoral-container .headline-container {
-    background-color: #e6e6e6;
-}
 .grid-content {
     border-radius: 4px;
     min-height: 36px;    
 }
-.editoral-container .headline-container .title-container{    
-    h1{
-        color: $main-blue;
-        font-size: 34px;
-        font-family: 'Neosans-Black';
-        margin: 20px 0;
-    }
-}
-.editoral-container .headline-container .latest-news{
-    background-color: #fff;
-    //min-height: 300px;
-    //margin-bottom: 40px;
-    margin-top: 20px;
-}
 
-.editoral-container .headline-container .latest-news .background {
-    position: relative;
-    text-align: center;
-    
-}
-.editoral-container .headline-container .latest-news .backgroundx {
-    width: 100%; 
-    height: 100%; 
-    position: fixed; 
-    left: 0px; 
-    top: 0px; 
-    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
-}
-.editoral-container .headline-container .latest-news .background img{    
-    width: 100%;    
-    height: 100%;    
-}
-
-.editoral-container .headline-container .latest-news .background .editorial-type-img {
-    position: absolute;
-    top: 5%;
-    left: 2%;
-    // transform: translate( -50%, -50% );
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    background-color: $main-blue;
-    padding: 10px 10px 8px 10px;
-        h2{
-            text-transform: uppercase;
-            font-size: 1em;
-            margin: 0;
+.editoral-container {
+    .headline-container {
+        background-color: #e6e6e6;
+        padding: 20px 0 10px 0;
+        .latest-news{
+            background-color: #fff;
+            .image-hl{
+                img{
+                    width: 100%;    
+                    height: 100%;
+                }
+            }
+            .info{
+                padding: 10px 20px 20px 20px;                
+                h1{
+                    margin: 0 0 10px 0;
+                }
+                .teaser{    
+                    font-size: 0.8em;
+                    line-height: 1.1em;
+                }
+                .author{
+                    font-size: 0.75em;
+                }
+                .share{                    
+                    padding-bottom: 5px;
+                }
+            }
         }
-    
-}
-
-
-.editoral-container .headline-container .latest-news .content{
-    padding: 20px 20px 0 20px;
-}
-.editoral-container .headline-container .latest-news .content .ln-share{
-    margin-bottom: 10px;
-}
-.editoral-container .headline-container .latest-news .content .ln-title{
-    h1{
-        // font-weight: bold;
-        // font-size: 2em;
-        // line-height: 2.2em;
-        margin: 0 0 10px 0;
+        .navigasi{
+            // background-color: #ff0;
+        }
     }    
 }
-.editoral-container .headline-container .latest-news .content .ln-teaser{    
-    font-size: 1em;
-    margin-bottom: 10px;
-}
-.editoral-container .headline-container .latest-news .content  .footer{
-    font-weight: bold;
-    font-size: 0.8em;
-}
 
+
+/*
+    baca lainnya, terpopular, ...
+*/
 .editoral-container .list-container{    
     background-color: #fff;
     display: flex;
