--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -157,7 +157,11 @@ h1, h2, h3, h4, h5, h6{
 */
 .gf-slider{  
   .el-carousel__container{
-    height: 563px;
+    // height: 563px;
+    position:relative;
+    height: 0;
+    padding-bottom: 68%;
+    margin: 0 auto;
   }
   .el-carousel__indicators{
     // padding: 0;
