--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,6 +116,9 @@ a:hover {
 .m-b-20 {
   margin-bottom: 20px;
 }
+.m-l-5 {
+  margin-left: 5px;
+}
 .p-tb-5 {
   padding-top: 5px;
   padding-bottom: 5px;
