added closed icon

--- a/src/styles/home-header.scss
+++ b/src/styles/home-header.scss
@@ -273,6 +273,7 @@ li > a:only-child:after { content: ''; }
   }    
 }
 
+.cross-menu,
 .hamburger-menu{
     float: right;
     text-align: right;
