--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -241,6 +241,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .ads-gallery{  
-  background-color: $black-2;
-  min-height: 400px;  
+  background-color: #323232;
+  max-height: 420px;
+  height: 420px;
 }
