--- a/src/styles/adsbanner.scss
+++ b/src/styles/adsbanner.scss
@@ -12,8 +12,8 @@
     }
     &-content{
         // text-align: center;        
-        background-color: #333;
-        padding: 10px;
+        // background-color: #333;
+        //padding: 10px;
         // display:block;
         // height: auto;
         img{
