--- a/src/styles/home-header.scss
+++ b/src/styles/home-header.scss
@@ -53,7 +53,7 @@
     }
   }
   &-content{
-    height: 90px;
+    height: 90px;    
   }
   &-logo{
     text-align: left;
@@ -76,7 +76,7 @@
   }
   &-user{
     text-align: right;
-    a{        
+    a, a:visited{        
       font-family: 'Neosans-black'; 
       font-size: 0.75em;        
       color: $main-blue;
@@ -136,6 +136,12 @@
         margin-left: 5px;
         padding-right: 5px;
         border-left: 1px solid #ccc;
+      }
+      a, a:visited{        
+        color: $main-blue;        
+      }
+      a:hover{
+        color: $main-red;
       }
       .avatar-container{
         height: 100%;        
