--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -127,6 +127,33 @@ h1, h2, h3, h4, h5, h6{
 }
 
 /*
+  additional  top slider
+*/
+@media all and (max-width : 768px) {
+  .slidertop-wrapper{    
+    .swiper-button-next, .swiper-button-prev{
+      margin-top: 25px!important;
+      z-index: 2!important;
+    }
+  }
+}
+@media all and (max-width : 480px) {
+  .slidertop-wrapper{    
+    .swiper-button-next, .swiper-button-prev{
+      margin-top: 35px!important;
+      z-index: 2!important;
+    }
+  }
+}
+@media all and (max-width : 330px) {
+  .slidertop-wrapper{    
+    .swiper-button-next, .swiper-button-prev{
+      margin-top: 40px!important;
+      z-index: 2!important;
+    }
+  }
+}
+/*
   home-headline-slider indicator
   set height
   set indicator
@@ -149,7 +176,8 @@ h1, h2, h3, h4, h5, h6{
     height: 12px;
     border-radius: 50%;
   }
-  @media (min-width: 320px) and (max-width: 768px) {
+  
+  @media all and (max-width : 768px) {
     .el-carousel__container{
       height: 400px;      
     }
