--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -103,6 +103,9 @@
                         width: 14px;
                         height: 14px;
                     }
+                    a, a:hover, a:visited{
+                        color: #696968;
+                    }
                 }
             }
 
