--- a/src/styles/home-header.scss
+++ b/src/styles/home-header.scss
@@ -360,7 +360,7 @@ li > a:only-child:after { content: ''; }
 	.toggle {
 		display: block;
 		//background-color: $red-1;
-		padding: 10px 10px;	
+		padding: 10px 0;	
 		color: $bb-white-menu;
 		text-decoration: none;
 		border: none;
