top slider arrow

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6{
   .slidertop-wrapper{    
     .swiper-button-next, .swiper-button-prev{
       margin-top: 25px!important;
-      z-index: 2!important;
+      // z-index: -2!important;
     }
   }
 }
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6{
   .slidertop-wrapper{    
     .swiper-button-next, .swiper-button-prev{
       margin-top: 35px!important;
-      z-index: 2!important;
+      // z-index: -2!important;
     }
   }
 }
@@ -149,7 +149,7 @@ h1, h2, h3, h4, h5, h6{
   .slidertop-wrapper{    
     .swiper-button-next, .swiper-button-prev{
       margin-top: 40px!important;
-      z-index: 2!important;
+      // z-index: -2!important;
     }
   }
 }
