--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -44,7 +44,7 @@
                     font-size: 0.9em;
                     line-height: 1.2em;
                     margin-bottom: 10px;
-                    text-align: justify;
+                    // text-align: justify;
                 }
                 .author{
                     font-weight: bold;
