--- a/src/styles/home-headline-slider.scss
+++ b/src/styles/home-headline-slider.scss
@@ -46,7 +46,7 @@ h2{
         font-size: 0.9em;
         line-height: 1.2em;
         margin: 0; padding-bottom: 5px;
-        text-align: justify;
+        // text-align: justify;
     }
     .author{
         margin: 0; padding: 0;
