--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -65,6 +65,12 @@ h1, h2, h3, h4, h5, h6{
 
 .comments-paging,
 .ac-paging{
+  
+  .el-pagination {
+    white-space: pre-wrap;
+    padding: 0;    
+  }
+  
   .el-pagination.is-background .btn-next,
   .el-pagination.is-background .btn-prev,
   .el-pagination.is-background .el-pager li {    
