pagination font size on responsive

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6{
 .ac-paging{
   
   .el-pagination {
-    white-space: pre-wrap;
+    // white-space: pre-wrap;
     padding: 0;    
   }
   
@@ -78,7 +78,11 @@ h1, h2, h3, h4, h5, h6{
     color: $black-2;
     font-family: DINPro-Regular, Neosans-Medium-Italic, Arial, sans-serif;
     font-weight: 700;
-    font-size: 12px;    
+    font-size: 12px;
+    @media all and (max-width : 768px) {
+      font-size: 10px;
+      margin: 0;
+    }    
     &:hover { 
       color: $main-red;
     }
