mobile view: - width 330px (center)

--- a/src/styles/portal-login.scss
+++ b/src/styles/portal-login.scss
@@ -26,7 +26,8 @@
     @media all and (max-width : 768px) {
         position: absolute;
         top: 0; left: 0; right: 0;
-        margin: 40px auto;        
+        margin: 100px auto;
+        width: 330px;
     }
 }
 .login .login-box .logo{
