--- a/src/styles/portal-signup.scss
+++ b/src/styles/portal-signup.scss
@@ -31,7 +31,8 @@ $lightest_gray: #eef5f8;
     @media all and (max-width : 768px) {
         position: absolute;
         top: 0; left: 0; right: 0;
-        margin: 40px auto;        
+        margin: 40px auto;
+        width: 330px;        
     }
 }
 .signup .signup-box .logo{
