mobile view: - comment box - comment list

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -303,4 +303,8 @@
             font-size: 0.9em;            
         }
     }
+    .article-container .comments-container{       
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
