--- a/src/styles/comment-box.scss
+++ b/src/styles/comment-box.scss
@@ -21,3 +21,24 @@
     font-size: 10px;
     line-height: 18px;
 }
+
+@media all and (max-width: 480px) {    
+    .comment-box .content{
+        padding: 10px;
+        &-img{        
+            .img-mini{
+                width: 40px;
+                height: 40px;
+            }
+        }
+        &-comment{
+            .el-textarea{
+                font-size: 0.8em;
+            }
+        }
+        button{
+            font-size: 0.8em;
+            padding: 8px 20px;
+        }
+    }
+}
