--- a/src/styles/comment-list.scss
+++ b/src/styles/comment-list.scss
@@ -42,3 +42,20 @@
     font-size: 10px;
     line-height: 18px;
 }
+
+@media all and (max-width: 480px) {    
+    .comment-list .content{
+        padding-left: 5px;
+        font-size: 0.8em;
+        .comment-img{
+            padding-left: 5px;
+            .img-mini{
+                width: 40px;
+                height: 40px;
+            }
+        }
+        .comment-comment{
+            padding: 0 5px;
+        }
+    }   
+}
