--- a/src/styles/home-headline-slider.scss
+++ b/src/styles/home-headline-slider.scss
@@ -26,9 +26,10 @@ h2{
 }
 
 .share{
-    // padding: 10px 0 5px 0;
-    position: absolute;
-    bottom: 20px;
+    position: relative;
+    display: block;
+    bottom: 0;
+    margin-top: 5px;
 
 }
 
@@ -55,7 +56,7 @@ h2{
         font-weight: 900;
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media all and (max-width: 768px) {
     h2{
         font-size: 0.8em;
     }    
@@ -76,13 +77,7 @@ h2{
         .author{           
             font-size: 0.75em;            
         }
-    }
-    .share{
-        position: relative;
-        display: block;
-        bottom: 0;
-        margin-top: 10px;
-    }
+    }    
 }
 
 
