--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,28 +6,35 @@
 @import './sidebar.scss';
 @import './home.scss';
 
+// optimizing https://developers.google.com/web/updates/2016/02/font-display
 @font-face {
   font-family: 'DINPro-Regular';
+  font-display: auto;
   src: url('../assets/fonts/dinpro/DINPro-Regular_13937.ttf'); 
 }
 @font-face {
   font-family: 'DINPro-Bold';
+  font-display: auto;
   src: url('../assets/fonts/dinpro/DINPRO-BOLD.ttf'); 
 }
 @font-face {
   font-family: 'Neosans';
+  font-display: auto;
   src: url('../assets/fonts/neosans/NEOSANS.otf'); 
 }
 @font-face {
   font-family: 'Neosans-Medium-Italic';
+  font-display: auto;
   src: url('../assets/fonts/neosans/NeoSans Medium Italic.otf'); 
 }
 @font-face {
   font-family: 'Neosans-Medium';
+  font-display: auto;
   src: url('../assets/fonts/neosans/NeoSans Medium.otf'); 
 }
 @font-face {
   font-family: 'Neosans-Black';
+  font-display: auto;
   src: url('../assets/fonts/neosans/NeoSans Black.otf'); 
 }
 body {
