--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -342,7 +342,8 @@ a:hover {
   color: $main-blue
 }
 .wscnph{
-  max-width: 100%;
+  max-width: 560px;
+  max-height: 314px;
 }
 .copywriter{
   font-size: 0.7em;
