--- a/src/styles/portal-signup.scss
+++ b/src/styles/portal-signup.scss
@@ -17,21 +17,25 @@ $lightest_gray: #eef5f8;
     background-size: cover;
     width: 100%;
     height: 100%;
+    @media all and (max-width : 768px) {
+        overflow: scroll;
+    }
 }
 .signup .signup-box{
     position: absolute;
     background-color: #fff;
     width: 390px;
     border-radius: 10px;
-    top: 20%;
+    bottom: 2%;
     right: 10%;
     font-size: 0.8em;
     padding: 20px 40px;
     color: $dark_gray;
     @media all and (max-width : 768px) {
-        position: absolute;
-        top: 0; left: 0; right: 0;
-        margin: 40px auto;
+        position: relative;
+        top: 0; left: 0; right: 0; bottom: 0;
+        margin: 20px auto;
+        padding: 20px 40px;
         width: 330px;        
     }
 }
@@ -42,9 +46,12 @@ $lightest_gray: #eef5f8;
 .signup .signup-box img{
     max-width: 60px;
     height: auto;
+    @media all and (max-width : 768px) {
+        max-width: 40px;
+    }
 }
 .signup .signup-box .form{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .signup .signup-box .options{
     text-align: center;
@@ -53,6 +60,9 @@ $lightest_gray: #eef5f8;
 }
 .signup .signup-box .options .signup-with{
     margin-bottom: 20px;
+    @media all and (max-width : 768px) {
+        margin-bottom: 5px;
+    }
     // font-size: 3em;    
     .fb-signin-button {
         /* This is where you control how the button looks. Be creative! */
